--- a/helloworld.html
+++ b/helloworld.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
-    <head>
-        <title>Hello World</title>
-        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
-    </head>
-    <body>
-        <h1>Hello World !!!</h1>
-    </body>
-</html>
+<DOCTYPE HTML5>
+    <html>
+        <head>
+            <title>Hello World</title>
+            
+        </head>
+        <body>
+                <h1>Hello World !!</h1>
+        </body>
+    </html>
